--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,38 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+#box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100vh;
+  padding: 60px 0; /* Adjust for fixed header and footer */
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,7 +55,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 15px;
   display: flex;
   place-items: center;
   min-width: 320px;
