--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,9 +1,14 @@
 .header{
-    width: 100;
+    width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     gap: 50px;
     align-items: center;
+}
+
+.nav{
+    font-size: 20px;
 }
 
 .nav, nav div{
@@ -11,3 +16,8 @@
     justify-content: space-around;
     gap: 20px;
 }
+
+.header a:hover {
+    color: #535bf2;
+  }
+
