--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,9 +14,9 @@
 }
 
 header {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   padding: 10px 0;
   text-align: center;
@@ -27,8 +27,15 @@ header {
 }
 
 #main-content{
-  margin-top: 70px;
+  margin-top: 30px;
   width: 100%;
+}
+
+.frame{
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 footer {
@@ -43,24 +50,23 @@ footer {
 }
 
 #box {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   min-height: 100vh;
-  padding: 60px 0; 
+  padding: 10px 0; 
   box-sizing: border-box;
   width: 100%
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+a{
+  text-decoration: none;
+  color: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
+
+
+
 
 body {
   margin: 0;
