--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* *:before *:after{
+  box-sizing: border-box;
+}
+
 header {
   /* position: fixed;
   top: 0;
@@ -29,24 +33,30 @@ header {
 #main-content{
   margin-top: 30px;
   width: 100%;
+  min-height: 75vh;
 }
 
 .frame{
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap; /* Allows wrapping */
 }
 
 footer {
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
-  left: 0;
+  left: 0; */
+  align-self: flex-end;
   width: 100%;
   padding: 10px 0;
   text-align: center;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  color: #242424;
+  background-color: #fff;
+  
 }
 
 #box {
@@ -57,7 +67,7 @@ footer {
   min-height: 100vh;
   padding: 10px 0; 
   box-sizing: border-box;
-  width: 100%
+  width: 100%;
 }
 
 a{
@@ -123,10 +133,13 @@ input.invalid:focus {
 
 textarea{
   padding: 8px;
+  width: 80%;
+  align-self: center;
   border: 2px solid #ccc;
   border-radius: 4px;
   outline: none;
   transition: border 0.2s ease-in-out;
+  margin-bottom: 10px;
 }
 
 textarea.invalid{
@@ -138,10 +151,8 @@ textarea.invalid:focus{
 }
 
 img {
-  max-width: 150px;
-  max-height: 150px;
-  width: auto;
-  height: auto;
+  max-width: 200px;
+  max-height: 160px;
   object-fit: contain;
 }
 
