--- a/client/src/components/homePage/Home.module.css
+++ b/client/src/components/homePage/Home.module.css
@@ -10,4 +10,12 @@
     flex-direction: column;
     gap: 15px;
     align-items: center;
+    font-size: 1.5em;
 }
+
+
+
+
+.actionButtons a {
+    color: #747bff;
+  }
