--- a/client/src/components/catalog/Catalog.module.css
+++ b/client/src/components/catalog/Catalog.module.css
@@ -14,9 +14,10 @@
 .catalogHeader{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     margin-bottom: 3rem;
+    text-align: center;
 }
 
 .catalog h1{
